--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,20 @@
 {
   "compilerOptions": {
+    "outDir": "dist",
+    "rootDir": "src",
+    "declaration": true,
+    "declarationMap": true,
+    "target": "ES2022", // modern enough for Node 18+ without down-leveling too far
+    "module": "NodeNext", // aligns with "type": "module" in package.json
+    "moduleResolution": "NodeNext", // for package-style exports/subpath support
+    "resolveJsonModule": true, // optional: if you import .json
     "strict": true,
     "esModuleInterop": true,
-    "module": "ESNext",
-    "target": "ESNext",
-    "moduleResolution": "node",
-    "outDir": "./dist"
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "incremental": true
   },
-  "include": ["src/**/*"],
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
