--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,6 @@
 onlyBuiltDependencies:
   - esbuild
+overrides:
+  undici@>=4.5.0 <5.28.5: '>=5.28.5'
+  esbuild@<=0.24.2: '>=0.25.0'
+  undici@<5.29.0: '>=5.29.0'
