--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@vercel/bolt",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "repository": "https://github.com/vercel/vercel-bolt",
   "description": "Bolt Receiver for Vercel Fluid Compute",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "README.md",
+    "package.json"
   ],
   "dependencies": {
     "@vercel/functions": "^2.2.4",
@@ -23,5 +25,5 @@
     "build": "tsc"
   },
   "author": "Vercel",
-  "license": "ISC"
+  "license": "MIT"
 }
