--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "build": "tsc",
     "ci": "npm run build && npm run test",
     "test": "vitest run",
-    "dev": "vitest watch"
+    "dev": "vitest watch",
+    "release": "changeset version && changeset publish",
+    "prepublishOnly": "npm run ci"
   },
   "dependencies": {
     "@vercel/functions": "^2.2.4",
@@ -37,6 +39,7 @@
     "@slack/bolt": "^4.4.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.5",
     "@types/node": "^22.10.5",
     "typescript": "^5.7.2",
     "vitest": "^3.2.4"
