--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
     "resolveJsonModule": true,
     "moduleDetection": "force",
     "isolatedModules": true,
-    "verbatimModuleSyntax": true,
 
     /* Strictness */
     "strict": true,
@@ -16,7 +15,7 @@
     "noImplicitOverride": true,
 
     /* If transpiling with TypeScript: */
-    "module": "NodeNext",
+    "module": "commonjs",
     "outDir": "dist",
     "rootDir": "src",
     "sourceMap": true,
