--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "@slack/logger": "^4.0.0",
     "@vercel/functions": "^2.2.4",
-    "@vercel/node": "^5.3.6"
+    "@vercel/node": "^5.3.6",
+    "tsscmp": "^1.0.6"
   },
   "peerDependencies": {
     "@slack/bolt": "^4.4.0"
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
     "@types/node": "^22.10.5",
+    "@types/tsscmp": "^1.0.2",
     "typescript": "^5.7.2",
     "vitest": "^3.2.4"
   }
