--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "bugs": {
     "url": "https://github.com/vercel/vercel-bolt/issues"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Vercel",
   "repository": {
     "type": "git",
