--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vercel/bolt",
+  "name": "@vercel/slack-bolt",
   "version": "1.0.9",
   "description": "A Vercel receiver for building Slack apps with Bolt and deploying them to Vercel",
   "keywords": [
