--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "clean": "rm -rf dist",
     "ci": "npm run build && npm run test",
     "release": "changeset version && changeset publish",
+    "lint": "biome check .",
+    "lint:fix": "biome check . --write",
     "prepublishOnly": "npm run ci"
   },
   "keywords": [
@@ -49,12 +51,14 @@
     "tsscmp": "^1.0.6"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.1.3",
     "@changesets/cli": "^2.29.5",
     "@types/node": "^22.10.5",
     "@types/tsscmp": "^1.0.2",
+    "biome": "^0.3.3",
+    "tsup": "^8.0.0",
     "typescript": "^5.7.2",
-    "vitest": "^3.2.4",
-    "tsup": "^8.0.0"
+    "vitest": "^3.2.4"
   },
   "peerDependencies": {
     "@slack/bolt": "^4.4.0"
