--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
   },
   "packageManager": "pnpm@9.4.0",
   "publishConfig": {
-    "access": "public",
-    "provenance": true
+    "access": "public"
   }
 }
