.github/workflows/release.yml README.md biome.json

--- a/biome.json
+++ b/biome.json
@@ -12,7 +12,8 @@
       "tsup.config.ts",
       "tsconfig.json",
       "biome.json",
-      "vitest.config.ts"
+      "vitest.config.ts",
+      ".github/**/*"
     ]
   },
   "formatter": {
