--- a/biome.json
+++ b/biome.json
@@ -40,7 +40,7 @@
     "enabled": true,
     "actions": {
       "source": {
-        "organizeImports": "off"
+        "organizeImports": "on"
       }
     }
   }
