--- a/package.json
+++ b/package.json
@@ -45,14 +45,12 @@
   "license": "MIT",
   "dependencies": {
     "@slack/logger": "^4.0.0",
-    "@vercel/functions": "^2.2.7",
-    "tsscmp": "^1.0.6"
+    "@vercel/functions": "^2.2.7"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.3",
     "@changesets/cli": "^2.29.6",
     "@types/node": "^20.19.9",
-    "@types/tsscmp": "^1.0.2",
     "tsup": "^8.5.0",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
