--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/vercel/vercel-bolt.git"
+    "url": "https://github.com/vercel-labs/slack-bolt.git"
   },
   "bugs": {
-    "url": "https://github.com/vercel/vercel-bolt/issues"
+    "url": "https://github.com/vercel-labs/slack-bolt/issues"
   },
   "scripts": {
     "build": "tsup",
