--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/vercel-labs/slack-bolt.git"
+    "url": "https://github.com/vercel-labs/slack-bolt"
   },
   "bugs": {
     "url": "https://github.com/vercel-labs/slack-bolt/issues"
@@ -49,7 +49,7 @@
     "@vercel/functions": "^2.2.12"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.0",
+    "@biomejs/biome": "2.2.2",
     "@changesets/cli": "^2.29.6",
     "@types/node": "^24.3.0",
     "husky": "^9.1.7",
