--- a/examples/nextjs/manifest.json
+++ b/examples/nextjs/manifest.json
@@ -22,6 +22,7 @@
   "oauth_config": {
     "scopes": {
       "bot": [
+        "app_mentions:read",
         "channels:history",
         "chat:write",
         "commands"
