--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "vercel-slack build --manifest manifest.json && next build",
     "start": "next start",
     "lint": "eslint"
   },
